<resources>
    //Text of test
    <string name="textTest">High school</string>

    //Text of Button
    <string name="confirm">Confirm</string>
    <string name="deleteCourse">Are you sure you want to delete this course?</string>
    <string name="deleteStudent">Are you sure you want to delete this student?</string>
    <string name="logOutSession">You want to close the session</string>
    <string name="delete">Delete</string>
    <string name="logOut">Log out</string>
    <string name="cancel">Cancel</string>

    //Login
    <string name="app_name"></string>
    <string name="strCreateAccount"><u>Create account</u></string>
    <string name="strForgotMyPassword"><u>Forgot my password</u></string>
    <string name="strCreateUser">Creating user</string>
    <string name="strNameUser">Username</string>
    <string name="strEmail">E-mail</string>
    <string name="strPassword">Password</string>
    <string name="strPasswordRepeat">Confirm Password</string>
    <string name="strCreateUserBtn">Create user</string>
    <string name="strToAccess">To access</string>
    <string name="strYouAreNew">You are new?</string>
    <string name="ErrorCheck">ERROR, check your credentials</string>

    //Course
    <string name="edtNameCourse">Course name</string>
    <string name="edtSchoolCourse">Name of school</string>
    <string name="edtShiftCourse">Shift</string>
    <string name="edtAddressCourse">Address</string>
    <string name="btnCreateCourse">Create</string>
    <string name="btnCancel">Cancel</string>
    <string name="enterName">You must enter a name to the course and school</string>
    <string name="failedCourse">Failed to save course</string>


    <string name="title_activity_hi_teacher">HiTeacher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome teacher</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log out</string>

    <string name="menu_home">Courses</string>
    <string name="menu_gallery">Take attendance</string>
    <string name="menu_slideshow">My Students</string>
    <string name="title_activity_page_course">New school</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lastname_of_student">LastName of student</string>
    <string name="name_of_student">Name of student</string>
    <string name="lastname">LastName:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="nationality">Nationality:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="document">Document:</string>
    <string name="e_mail">E-mail:</string>
    <string name="state">State:</string>
    <string name="update">Update</string>
    <string name="return_student">Return</string>
    <string name="to_register">To register</string>
    <string name="you_are_already_logged">You are already logged in, if you want to close the session keep pressing the create button</string>
    <string name="photo">Photo</string>
    <string name="select_photo">Cam</string>
    <string name="cam">Cam</string>
    <string name="courses">Courses</string>
    <string name="create_new_password">Create new password</string>
    <string name="search_student_by_name">Search student by name</string>
</resources>