<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_detail_student"
    android:orientation="vertical"
    android:padding="16dp"
    android:alpha="0.8"
    tools:context=".ui.courses.CoursesViewModel">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="none"
        android:accessibilityTraversalAfter="@id/imgPhoto"
        android:fadeScrollbars="false"
        android:gravity="center"
        android:padding="7dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/random_photo_student"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/lastname"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/phone"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/nationality"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/birthdate"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/document"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/e_mail"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmailStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:text="@string/state"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/return_student" />

        <Button
            android:id="@+id/btnUpdateStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cam" />

    </LinearLayout>


</LinearLayout>